# SceneWeaver

./: .env  .gitignore  README.md  prompts.csv  pyproject.toml  run.sh  run_idesign.py  run_idesign.sh  run_invisible.sh  run_layoutgpt.py
GPT/: constants.py.bak  objaverse_retriever copy.py  prompt3.py  prompts.py  results.json  retrieve copy.py
Pipeline/: TongGPT.py  __init__.py  add_gpt.py  add_gpt_prompt.py  debu.py  evaluation.py  evaluation_idesign.py  evaluation_img.py  gpt.py  (+19 more)
tools/acdc/: =1.0.0  README.md  VHACD_INSTALL.md  activate_acdc.sh  checkpoints  deps  pyproject.toml  requirements.txt  retrieve.sh  run.sh
tools/acdc/digital_cousins/: __init__.py
tools/acdc/digital_cousins/configs/: config_step3.yaml  default.yaml  dift.yaml  pipeline.yaml
tools/acdc/digital_cousins/models/: TongGPT.py  clip.py  dift.py  dino_v2.py  feature_matcher.py  gpt.py  visual_encoder.py
tools/acdc/digital_cousins/models/ICP/: ICP_match.py
tools/acdc/digital_cousins/models/blend/: blender_render.py  blender_util.py  configs.py  launch_blender.py  load_objaverse.py  render_candidates.py  render_depth.py  render_generation.py
tools/acdc/digital_cousins/models/objaverse/: __init__.py  candidates.py  check_assets.py  constants.py  holodeck_retriever.py  idesign_retriever.py  retrieve.py  utils.py
tools/acdc/digital_cousins/pipeline/: acdc.py  acdc_pipeline.py  extraction.py  generation.py  matching.py
tools/acdc/digital_cousins/utils/: dataset_utils.py  processing_utils.py  scene_utils.py
tools/acdc/scripts/: setup_pipeline.sh
tools/acdc/tests/: test_models.py
(+176 files in other folders)
